--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: C++
 install:
-  - pip install conan
+  - pip3 install --upgrade pip
+  - pip3 install conan
   - conan remote add $CONAN_REMOTE_USERNAME $CONAN_REMOTE_URL
 script: 
   - conan create . jabaa/stable -tf .
