--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: C++
 install:
-  - apt install python3.6
+  - sudo apt-get update && sudo apt-get install -qq python3.6
   - pip3 install --upgrade pip
   - pip3 install conan
   - conan remote add $CONAN_REMOTE_USERNAME $CONAN_REMOTE_URL
