--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ addons:
     packages:
     - cmake
     - python3
+    - python3-pip
 install:
   - pip3 install --upgrade pip
   - pip3 install conan
