--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: C++
+env:
+  - VERSION=0.1
 addons:
   apt:
     update: true
@@ -11,9 +13,10 @@ install:
   - sudo pip3 install --upgrade setuptools
   - pip3 install --user conan
   - conan remote add $CONAN_REMOTE_USERNAME $CONAN_REMOTE_URL
+  - conan user -r $CONAN_REMOTE_USERNAME -p $CONAN_REMOTE_PASSWORD $CONAN_REMOTE_USERNAME
 script: 
-  - conan create . jabaa/stable -tf .
-  - conan create . jabaa/stable -tf . -o shared=False
+  - conan create . jabaa/stable -tf . && conan upload -r $CONAN_REMOTE_USERNAME --all ThreadPool/$VERSION@$CONAN_REMOTE_USERNAME/stable
+  - conan create . jabaa/stable -tf . -o shared=False && conan upload -r $CONAN_REMOTE_USERNAME --all ThreadPool/$VERSION@$CONAN_REMOTE_USERNAME/stable
 compiler:
   - clang
   - gcc
