--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ addons:
     - python3
     - python3-pip
 install:
-  - pip3 install --user pip
-  - pip3 install --user setuptools
+  - pip3 install --upgrade --user pip
+  - pip3 install --upgrade --user setuptools
   - pip3 install --user conan
   - conan remote add $CONAN_REMOTE_NAME $CONAN_REMOTE_URL
   - conan user -r $CONAN_REMOTE_NAME -p $CONAN_REMOTE_PASSWORD $CONAN_REMOTE_USERNAME
